# selection_translator_anki

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: ci-matrix.yml
desktop_app/: app.py  config.py  diagnose.py  gtk3_types.py  gtk_types.py  main.py  runtime_namespace.py  settings.py  telemetry.py  tray_helper.py
desktop_app/adapters/: clipboard.py  clipboard_writer.py  desktop_entry.py  notification_sender.py  signal_adapter.py  tray.py
desktop_app/anki/: __init__.py  client.py  connect_config.py  field_hints.py  importer.py  service.py  templates.py
desktop_app/application/: anki_flow.py  anki_upsert.py  autostart_flow.py  clipboard_flow.py  desktop_entry_flow.py  examples_state.py  history.py  notifications.py  notify_messages.py  ports.py  process_flow.py  query.py  signal_flow.py  translation_flow.py  translation_session.py  tray_flow.py  view_state.py
desktop_app/controllers/: __init__.py  anki_controller.py  settings_controller.py  translation_controller.py  translation_state.py  translation_view.py
desktop_app/gnome/: __init__.py  dbus_service.py
desktop_app/hotkey/: __init__.py  core.py  gnome.py  manager.py  portal.py  system.py  x11.py
desktop_app/ui/: __init__.py  (+4 more)
dev/: run_dev_instance.sh
docs/: windows_bootstrap.md  windows_codex.config.example.toml
scripts/: bootstrap_windows.ps1  db-bundle.lock.json  download_language_bases.py  install.sh  install_gnome.sh  release-assets.sha256  run_backend.sh  runtime-requirements.txt
tests/: test_deck_importer.py  test_example_filtering.py  test_example_generator.py  test_examples_refresh.py  test_history_click.py  test_history_store.py  test_language_base_builder.py  test_language_base_fallback_builder.py  test_language_base_provider.py  test_language_base_validation.py  test_notifications.py  test_opus_mt_provider.py  test_platform_factory.py  test_platform_paths.py  test_query_normalization.py  test_regressions.py  test_release_metadata.py  test_reverso_provider.py  test_runtime_namespace.py  test_settings_import.py  test_translation_performance.py  test_translation_sources.py  test_translation_variants.py  test_virsh_send_text.py  test_windows_gate_evidence.py  test_windows_gate_host_runner.py  test_windows_ipc.py  test_windows_ipc_service.py  test_windows_vm_preflight.py
tools/: dev_reload.sh  dev_setup.sh  problems.py
translate_logic/: cache.py  engine.py  example_selection.py  highlight.py  http.py  models.py  nlp_en.py  ranking.py  text.py  translation.py
translator/: __init__.py  cli.py  repl.py
(+138 files in other folders)
