[project]
name = "translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "ctranslate2>=4.7.1",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.14",
    "types-python-xlib>=0.33.0.20250809",
]

[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
root = ["."]
extra-paths = ["./typings"]

[tool.ty.src]
include = ["translate_logic", "desktop_app", "tests", "typings"]
exclude = [
  "**/node_modules/**",
  "**/__pycache__/**",
  "**/.venv/**",
  "**/.git/**",
  "**/.idea/**",
  ".mypy_cache/**",
  ".pytest_cache/**",
  ".ruff_cache/**",
]

[tool.ty.rules]
possibly-missing-import = "error"
possibly-missing-attribute = "error"

[tool.ty.analysis]
respect-type-ignore-comments = true
