[project]
name = "translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-python-xlib>=0.33.0.20250809",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnusedImport = "error"
reportUnusedVariable = "error"
venvPath = "."
venv = ".venv"

include = ["."]
exclude = [
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "**/__pycache__",
]

